tests/invalid/data_loader_missing_type.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "DataLoaderMissingKind",
    "description": "Test case: data loader missing required 'kind' field",
    "authors": ["Test Suite"]
  },

  "data_loaders": {
    "BadLoader": {
      "source": { "url_template": "file:///data/{date:%Y%m%d}.nc" },
      "variables": {
        "T": { "file_variable": "T", "units": "K" }
      }
    }
  },

  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "1", "default": 1.0 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-0.1, "x"] }
        }
      ]
    }
  }
}
